@@ -54,3 +54,4 @@ Goun Lee <gouni.lee@samsung.com>
 Mikael Sans <sans.mikael@gmail.com>
 Doyoun Kang <doyoun.kang@samsung.com>
 M.V.K. Sumanth <sumanth.m@samsung.com> <mvksumanth@gmail.com>
+Jérôme Pinot <ngc891@gmail.com>
